--- a/Ex.016/color04.html
+++ b/Ex.016/color04.html
@@ -10,7 +10,7 @@
             font-family: 'Times New Roman', Times, serif;
         }
         h1,h2 {
-            
+            font-family: 'Courier New', Courier, monospace;
         }
     </style>
 </head>
