--- a/Ex.019/index.html
+++ b/Ex.019/index.html
@@ -10,17 +10,19 @@
 <body>
     <h1 id="principal">Creating html and CSS</h1>
     <h1>Learning HTML</h1>
-    <h2>HTML Basic</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In iure accusantium quidem dolore itaque, nam est sunt. Reiciendis atque nobis minima explicabo, odit excepturi aliquam dicta soluta omnis laudantium alias.</p>
-    <h2>HTML intermediate</h2>
+    <h2 class="basic">HTML Basic</h2>
+    <p>Lorem ipsum dolor sit amet <span class="advanced destaque">consectetur</span> adipisicing elit. In iure accusantium quidem dolore itaque, nam est sunt. Reiciendis atque nobis minima explicabo, odit excepturi aliquam dicta soluta omnis laudantium alias.</p>
+    <h2 class="intermediate">HTML intermediate</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui inventore aliquam enim assumenda explicabo, modi atque in iste? Repudiandae nobis ad nulla, reiciendis corrupti exercitationem culpa quaerat aliquam amet hic.</p>
-    <h2>HTML advanced</h2>
+    <h2 class="advanced">HTML advanced</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat impedit eligendi ab facilis. Magni excepturi ducimus alias omnis, ab, in dolorem quas facilis quidem hic consectetur harum iste odit iusto!</p>
     <h1>Learning CSS</h1>
-    <h2>CSS basics</h2>
+    <h2 class="basic">CSS basics</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit dolorum exercitationem dolores, harum obcaecati quisquam illo libero et quo alias labore optio nihil deserunt esse corrupti facere totam, cum debitis.</p>
-    <h2>CSS intermediate</h2>
+    <h2 class="intermediate">CSS intermediate</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis recusandae, veniam maxime quis quo possimus minima quos, sunt fugit fugiat autem eligendi. Architecto in corrupti perspiciatis corporis facilis earum unde?</p>
+    <h2 class="advanced">CSS advanced</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum placeat velit laudantium vel dignissimos? Ea nulla reiciendis non! Quam facilis cum repellendus numquam dolore quod, aliquid veniam architecto ad sunt?</p>
 
 </body>
 </html>
