--- a/Ex.021/box01.html
+++ b/Ex.021/box01.html
@@ -13,6 +13,17 @@
             border-width: 10px;
             border-style: solid;
             border-color: blue;
+            padding:10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-bottom: 10px;
+            margin: auto;
+        }
+        a {
+            border-width: 10px;
+            border-style: solid;
+            border-color: red;
+        
         }
     </style>
 </head>
