--- a/ex021 extra/portfolio.html
+++ b/ex021 extra/portfolio.html
@@ -11,14 +11,17 @@
 </head>
 <body>
     <header>
-        <h1>Cláudio Brito</h1>    
         <nav>
-            <a href="#" target="_blank">Portfolio</a>
-            <a href="#" target="_blank">Services</a>
-            <a href="#" target="_blank">About (process)</a>
-            <a href="#" target="_blank">Contact</a>
-            <a href="#" target="_self">Light/Dark Mode (só o desenho clicável do sol)</a>
-            <a href="#" target="_blank">My CV</a>
+            <a href="#"><img src="imagens/Logo Sena (Ícone cropped).png" alt="Logo" style="height: 50px;"></a>
+            <h1>Cláudio Brito</h1>
+            <span>
+                <a href="#" target="_blank">Portfolio</a>
+                <a href="#" target="_blank">Services</a>
+                <a href="#" target="_blank">About (process)</a>
+                <a href="#" target="_blank">Contact</a>
+                <a href="#" target="_self">Light/Dark Mode</a> <!--Só o desenho clicável do Sol-->
+                <a href="#" target="_blank">My CV</a>
+            </span>
         </nav>
     
     </header>
@@ -96,7 +99,7 @@
     <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/NN7YEIlc-Oc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
     <footer>
-        <p>Website created by<a href="https://www.linkedin.com/in/claudiobritof/" target="_blank">Cláudio</a>for professional purposes. © Copyright 2022.</p>
+        <p>Website created by<a href="https://www.linkedin.com/in/claudiobritof/" target="_blank">Cláudio</a>for professional purposes. © Copyright 2022</p>
     </footer>
 </body>
 </html>
